--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -9,34 +9,23 @@ c_compiler:
   - clang                      # [osx]
   - vs2017                     # [win]
 c_compiler_version:            # [unix]
-  - 11                         # [osx and arm64]
-  - 10                         # [osx and x86_64]
-  - 7                          # [linux64]
-  - 7.5                        # [aarch64]
-  - 8                          # [ppc64le]
-  - 8.3                        # [armv7l]
+  - 11                         # [osx]
+  - 9                          # [linux]
 cxx_compiler:
   - gxx                        # [linux]
   - clangxx                    # [osx]
   - vs2017                     # [win]
 cxx_compiler_version:          # [unix]
-  - 11                         # [osx and arm64]
-  - 10                         # [osx and x86_64]
-  - 7                          # [linux64]
-  - 7.5                        # [aarch64]
-  - 8                          # [ppc64le]
-  - 8.3                        # [armv7l]
+  - 11                         # [osx]
+  - 9                          # [linux]
 fortran_compiler:              # [unix or win64]
   - gfortran                   # [linux64 or (osx and x86_64)]
   - gfortran                   # [aarch64 or ppc64le or armv7l]
   - flang                      # [win64]
 fortran_compiler_version:      # [unix or win64]
   - 11                         # [osx and arm64]
-  - 7.5                        # [osx and x86_64]
-  - 7                          # [linux64]
-  - 7.5.0                      # [aarch64]
-  - 8                          # [ppc64le]
-  - 8.3                        # [armv7l]
+  - 9                          # [osx and x86_64]
+  - 9                          # [linux]
   - 5                          # [win64]
 m2w64_c_compiler:              # [win]
   - m2w64-toolchain            # [win]
@@ -51,10 +40,10 @@ cuda_compiler:                 # [linux64]
   - nvcc                       # [linux64]
 cuda_compiler_version:
   - None
-  - 9.2                        # [linux64]
-  - 10.0                       # [linux64]
-  - 10.1                       # [linux64]
   - 10.2                       # [linux64]
+cudnn:
+  - undefined
+  - 7                          # [linux64]
 
 _libgcc_mutex:
   - 0.1 conda_forge
@@ -93,10 +82,9 @@ target_gobin:
 # Rust Compiler Options
 rust_compiler:
   - rust
-  - rust-gnu                   # [win]
-rust_compiler_version:
-  - 1.40.0
-
+# Pin rust to <1.49 on osx-64 due to min deployment target req, cf. https://github.com/conda-forge/rust-feedstock/issues/73
+rust_compiler_version:  # [osx and x86_64]
+  - 1.46                # [osx and x86_64]
 
 macos_machine:                 # [osx]
   - x86_64-apple-darwin13.4.0  # [osx and x86_64]
@@ -114,43 +102,58 @@ VERBOSE_CM:
 # dual build configuration
 channel_sources:
   - conda-forge,defaults                        # [not (aarch64 or armv7l or (osx and arm64))]
-  - conda-forge/label/llvm_rc,conda-forge,https://conda-web.anaconda.org/conda-forge    # [osx and arm64]
+  - conda-forge/label/rust_dev,conda-forge      # [osx and arm64]
   - conda-forge                                 # [aarch64]
   - conda-forge,c4armv7l,defaults               # [armv7l]
 
 channel_targets:
   - conda-forge main
 
-docker_image:                           # [os.environ.get("BUILD_PLATFORM", "").startswith("linux") or (os.environ.get("CONFIG_VERSION", "1") == "1" and linux)]
-  - condaforge/linux-anvil-comp7        # [os.environ.get("BUILD_PLATFORM") == "linux-64" or (os.environ.get("CONFIG_VERSION", "1") == "1" and linux64)]
-  - condaforge/linux-anvil-aarch64      # [os.environ.get("BUILD_PLATFORM") == "linux-aarch64" or (os.environ.get("CONFIG_VERSION", "1") == "1" and aarch64)]
-  - condaforge/linux-anvil-ppc64le      # [os.environ.get("BUILD_PLATFORM") == "linux-ppc64le" or (os.environ.get("CONFIG_VERSION", "1") == "1" and ppc64le)]
-  - condaforge/linux-anvil-armv7l       # [os.environ.get("BUILD_PLATFORM") == "linux-armv7l" or (os.environ.get("CONFIG_VERSION", "1") == "1" and armv7l)]
+cdt_name:  # [linux]
+  - cos6   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
+  - cos7   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - cos7   # [linux and aarch64]
+  - cos7   # [linux and ppc64le]
+  - cos7   # [linux and armv7l]
 
-  - condaforge/linux-anvil-cuda:9.2     # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
-  - condaforge/linux-anvil-cuda:10.0    # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
-  - condaforge/linux-anvil-cuda:10.1    # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
-  - condaforge/linux-anvil-cuda:10.2    # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
+  - cos6   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
+  - cos7   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+
+docker_image:                                   # [os.environ.get("BUILD_PLATFORM", "").startswith("linux-")]
+  - quay.io/condaforge/linux-anvil-comp7        # [os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
+  - quay.io/condaforge/linux-anvil-cos7-x86_64  # [os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - quay.io/condaforge/linux-anvil-aarch64      # [os.environ.get("BUILD_PLATFORM") == "linux-aarch64"]
+  - quay.io/condaforge/linux-anvil-ppc64le      # [os.environ.get("BUILD_PLATFORM") == "linux-ppc64le"]
+  - quay.io/condaforge/linux-anvil-armv7l       # [os.environ.get("BUILD_PLATFORM") == "linux-armv7l"]
+
+  - quay.io/condaforge/linux-anvil-cuda:10.2       # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
+  - quay.io/condaforge/linux-anvil-cos7-cuda:10.2  # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
 
 zip_keys:
+  -                             # [unix]
+    - c_compiler_version        # [unix]
+    - cxx_compiler_version      # [unix]
+    - fortran_compiler_version  # [unix]
   -
     - python
-  -                             # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux64) or os.environ.get("BUILD_PLATFORM") == "linux-64"]
-    - cuda_compiler_version     # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux64) or os.environ.get("BUILD_PLATFORM") == "linux-64"]
-    - docker_image              # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux64) or os.environ.get("BUILD_PLATFORM") == "linux-64"]
+    - numpy
+    - python_impl
+  -                             # [linux64]
+    - cudnn                     # [linux64]
+    - cuda_compiler_version     # [linux64]
+    - cdt_name                  # [linux64]
+    - docker_image              # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
 
 # aarch64 specifics because conda-build sets many things to centos 6
 # this can probably be removed when conda-build gets updated defaults
 # for aarch64
 cdt_arch: aarch64                       # [aarch64]
-cdt_name: cos7                          # [aarch64]
 BUILD: aarch64-conda_cos7-linux-gnu     # [aarch64]
 
 # armv7l specifics because conda-build sets many things to centos 6
 # this can probably be removed when conda-build gets updated defaults
 # for aarch64
 cdt_arch: armv7l                          # [armv7l]
-cdt_name: cos7                            # [armv7l]
 BUILD: armv7-conda_cos7-linux-gnueabihf   # [armv7l]
 
 # TODO: remove these when run_exports are added to the packages.
@@ -165,17 +168,10 @@ pin_run_as_build:
     max_pin: x
   cairo:
     max_pin: x.x
-  cudnn:
-    max_pin: x
-    min_pin: x.x
   curl:
     max_pin: x
   dbus:
     max_pin: x
-  expat:
-    max_pin: x.x
-  ffmpeg:
-    max_pin: x.x
   fftw:
     max_pin: x
   flann:
@@ -186,8 +182,6 @@ pin_run_as_build:
     max_pin: x
   gdal:
     max_pin: x.x
-  gdk_pixbuf:
-    max_pin: x.x.x
   geotiff:
     max_pin: x.x.x
   glew:
@@ -202,8 +196,6 @@ pin_run_as_build:
     max_pin: x
   hdf4:
     max_pin: x.x
-  icu:
-    max_pin: x
   isl:
     max_pin: x.x
   jasper:
@@ -234,14 +226,8 @@ pin_run_as_build:
     max_pin: x.x
   libkml:
     max_pin: x.x
-  libmatio:
-    max_pin: x.x
-  libpcap:
-    max_pin: x.x
   libpng:
     max_pin: x.x
-  librdkafka:
-    max_pin: x.x.x
   librsvg:
     max_pin: x
   libsvm:
@@ -288,11 +274,11 @@ pin_run_as_build:
     max_pin: x.x
   perl:
     max_pin: x.x.x
-  pixman:
-    max_pin: x.x
   poppler:
     max_pin: x.x
   qt:
+    max_pin: x.x
+  qtkeychain:
     max_pin: x.x
   readline:
     max_pin: x
@@ -323,50 +309,64 @@ pin_run_as_build:
 
 # blas
 libblas:
-  - 3.8 *netlib
+  - 3.8 *netlib  # [not (osx and arm64)]
+  - 3.9 *netlib  # [osx and arm64]
 libcblas:
-  - 3.8 *netlib
+  - 3.8 *netlib  # [not (osx and arm64)]
+  - 3.9 *netlib  # [osx and arm64]
 liblapack:
-  - 3.8.0 *netlib
+  - 3.8 *netlib  # [not (osx and arm64)]
+  - 3.9 *netlib  # [osx and arm64]
 liblapacke:
-  - 3.8.0 *netlib
+  - 3.8 *netlib  # [not (osx and arm64)]
+  - 3.9 *netlib  # [osx and arm64]
 blas_impl:
   - openblas
   - mkl          # [x86 or x86_64]
   - blis         # [x86 or x86_64]
 
 abseil_cpp:
-  - '20200225.2'
+  - '20210324.0'
 alsa_lib:
   - 1.2.3
 arb:
-  - '2.18'
+  - '2.19'
 arpack:
-  - 3.6.3
+  - 3.7
 arrow_cpp:
-  - 0.17.1
+  - 4.0.0
+aws_c_common:
+  - 0.5.11
+aws_c_event_stream:
+  - 0.2.7
+aws_c_io:
+  - 0.9.12
+aws_checksums:
+  - 0.1.11
+aws_sdk_cpp:
+  - 1.8.186
 boost:
-  - 1.72.0  # [not (osx and arm64)]
-  - 1.74.0  # [osx and arm64]
+  - 1.74.0
 boost_cpp:
-  - 1.72.0  # [not (osx and arm64)]
-  - 1.74.0  # [osx and arm64]
+  - 1.74.0
 bzip2:
   - 1
 cairo:
   - 1.16
 cfitsio:
   - 3.470
-cudnn:
-  - 7.6.5
+cutensor:
+  - 1
 curl:
   - 7
 dbus:
   - 1
+exiv2:
+  - 0.27
 expat:
-  - 2.2
+  - 2
 ffmpeg:
-  - '4.2'
+  - '4.3'
 fftw:
   - 3
 flann:
@@ -376,23 +376,23 @@ fmt:
 fontconfig:
   - 2.13
 freetype:
-  - 2.9.1
+  - 2
 gf2x:
-  - 1.2
+  - '1.3'
 gdk_pixbuf:
-  - 2.36.12
+  - 2
 gnuradio_core:
-  - 3.8.2
+  - 3.8.3
 gsl:
   - 2.6
 gstreamer:
-  - 1.14.4
+  - 1.18
 gst_plugins_base:
-  - 1.14.4
+  - 1.18
 gdal:
-  - 3.0
+  - '3.1'
 geos:
-  - 3.8.1
+  - 3.9.1
 geotiff:
   - '1.6'
 gflags:
@@ -402,7 +402,7 @@ giflib:
 glew:
   - 2.1
 glib:
-  - 2.58
+  - '2'
 glog:
   - 0.4.0
 glpk:
@@ -410,42 +410,43 @@ glpk:
 gmp:
   - 6
 google_cloud_cpp:
-  - '1.17'
+  - '1.27'
 google_cloud_cpp_common:
   - 0.25.0
 googleapis_cpp:
   - '0.10'
 graphviz:
-  - 2.38  # [win]
-  - 2.40  # [not win]
+  - 2.47
 grpc_cpp:
-  - '1.30'
+  - '1.37'
 harfbuzz:
   - 2
 hdf4:
   - 4.2
 hdf5:
-  - 1.10.5
+  - 1.10.6
 icu:
-  - 64.2
+  - 68
 isl:
   - '0.22'
 jasper:
-  - 1.900.1
+  # the first windows build of jasper was 2.0.14
+  - 1  # [not (win or arm64)]
+  - 2  # [win or arm64]
 jpeg:
   - 9
 libjpeg_turbo:
   - 2
 json_c:
-  - 0.13
+  - 0.15
 jsoncpp:
-  - 1.8.4
+  - 1.9.4
 kealib:
   - 1.4
 krb5:
-  - 1.16
+  - 1.17.1
 libarchive:
-  - 3.3
+  - 3.5
 libblitz:
   - 0.10
 libcurl:
@@ -453,29 +454,35 @@ libcurl:
 libcrc32c:
   - 1.1
 libdap4:
-  - 3.20.2
+  - 3.20.6
 libevent:
   - 2.1.10
 libffi:
-  - 3.2
+  - '3.3'
 libgdal:
-  - 3.0
+  - '3.1'
+libgit2:
+  - '1.1'
 libiconv:
   - 1.16
 libkml:
   - 1.3
+libiio:
+  - 0.21
 libmatio:
   - 1.5
+libmicrohttpd:
+  - 0.9
 libnetcdf:
   - 4.7.4
 libpcap:
-  - '1.9'
+  - '1.10'
 libpng:
   - 1.6
 libprotobuf:
-  - 3.12
+  - '3.15'
 librdkafka:
-  - 0.11.5
+  - '1.6'
 librsvg:
   - 2
 libsecret:
@@ -486,22 +493,28 @@ libssh2:
   - 1
 libsvm:
   - 3.21
+libthrift:
+  - '0.14.1'
 libtiff:
-  - 4.1.0
+  - 4
 libunwind:
   - 1
 libv8:
-  - 8.4.371
+  - 8.9.83
 libwebp:
-  - 1.1
+  - 1
 libwebp_base:
-  - 1.1
+  - 1
 libxml2:
   - 2.9
 libuuid:
   - 2.32.1
+libzip:
+  - 1
+log4cxx:
+  - 0.11.0
 lz4_c:
-  - 1.9.2
+  - 1.9.3
 lzo:
   - 2
 metis:
@@ -511,7 +524,7 @@ mimalloc:
 mkl:
   - 2019
 mpich:
-  - 3.3
+  - 3
 mpfr:
   - 4
 mumps_mpi:
@@ -519,7 +532,7 @@ mumps_mpi:
 mumps_seq:
   - 5.2
 nccl:
-  - 2.4.6.1
+  - 2
 ncurses:
   - 6.2
 netcdf_cxx4:
@@ -527,30 +540,39 @@ netcdf_cxx4:
 netcdf_fortran:
   - 4.5
 nettle:
-  - 3.4
+  - '3.7'
 nss:
   - 3
 nspr:
   - 4
 nlopt:
-  - 2.6.*
+  - '2.7'
 ntl:
   - '11.4.3'
 # we build for the oldest version possible of numpy for forward compatibility
 numpy:
-  - 1.16
+  # part of a zip_keys: python, python_impl, numpy
+  - 1.17   # [not (osx and arm64)]
+  - 1.17   # [not (osx and arm64)]
+  - 1.17   # [not (osx and arm64)]
+  - 1.19   # [osx and arm64]
+  - 1.19
 occt:
-  - 7.4
+  - '7.5'
 openblas:
   - 0.3.*
+openexr:
+  - 2.5
 openjpeg:
-  - 2.3
+  - '2.4'
 openmpi:
-  - 4.0
+  - 4
 openssl:
   - 1.1.1
 openturns:
-  - '1.15'
+  - '1.16'
+orc:
+  - 1.6.7
 pango:
   - 1.42
 pari:
@@ -558,74 +580,100 @@ pari:
 perl:
   - 5.26.2
 petsc:
-  - 3.12
+  - 3.14
 petsc4py:
-  - 3.12
+  - 3.14
 slepc:
-  - 3.12
+  - 3.14
 slepc4py:
-  - 3.12
+  - 3.14
+pcre:
+  - '8'
+pcre2:
+  - '10.36'
 pixman:
-  - 0.38
+  - 0
 poco:
   - 1.10.1
 poppler:
-  - 0.67.0
+  - '21.03'
 proj:
-  - 7.1.0
+  - 7.2.0
+pybind11_abi:
+  - 4
 python:
+  # part of a zip_keys: python, python_impl, numpy
   - 3.6.* *_cpython    # [not (osx and arm64)]
   - 3.7.* *_cpython    # [not (osx and arm64)]
   - 3.8.* *_cpython
+  - 3.9.* *_cpython
 python_impl:
+  # part of a zip_keys: python, python_impl, numpy
+  - cpython   # [not (osx and arm64)]
+  - cpython   # [not (osx and arm64)]
+  - cpython
   - cpython
 qt:
   - 5.12
+qtkeychain:
+  - '0.12'
 re2:
-  - 2020.08.01
+  - 2021.04.01
 readline:
-  - 8.0
+  - "8"
 rocksdb:
   - "6.10"
 root_base:
-  - "6.20"
+  - 6.22.8
 ruby:
   - 2.5
   - 2.6
+# Pin rust to <1.49 on osx-64 due to min deployment target req, cf. https://github.com/conda-forge/rust-feedstock/issues/73
+rust:     # [osx and x86_64]
+  - 1.46  # [osx and x86_64]
 r_base:
-  - 3.6
+  - 3.6  # [not (osx and arm64)]
   - 4.0
 scotch:
-  - 6.0.8
+  - 6.0.9
 ptscotch:
-  - 6.0.8
+  - 6.0.9
+s2n:
+  - 1.0.7
 singular:
   - 4.1.2
 snappy:
   - 1
 soapysdr:
-  - 0.7
+  - '0.8'
 sox:
   - 14.4.2
 sqlite:
   - 3
 suitesparse:
-  - 5.6                # [not win]
-  - 5.4                # [win]
+  - 5
+tbb:
+  - 2020
+tbb_devel:
+  - 2020
+thrift_cpp:
+  - '0.14.1'
 tk:
   - 8.6                # [not ppc64le]
 tiledb:
-  - '2.0'
+  - '2.2'
 uhd:
   - 3.15.0
 vc:                    # [win]
   - 14                 # [win]
 vlfeat:
   - 0.9.20
+volk:
+  - '2.4'
 vtk:
-  - 8.2.0
+  - 9.0.1
 x264:
-  - 1!152.*
+  - '1!161.*'
 xerces_c:
   - 3.2
 xrootd:
@@ -633,7 +681,7 @@ xrootd:
 xz:
   - 5.2
 zeromq:
-  - 4.3.2
+  - 4.3.3
 zlib:
   - 1.2
 zstd:
