--- a/src/nabc/Makefile
+++ b/src/nabc/Makefile
@@ -61,6 +61,6 @@ uninstall: clean
 
 depend: $(NABCOBJS:.o=.c)
 	@echo "[NABC] make depend"
-	$(VB)$(CC) -MM $^ > $@
+	$(VB)$(CC) -MM $(CFLAGS) $^ > $@
 
 include depend
