--- a/src/parmed/Makefile
+++ b/src/parmed/Makefile
@@ -1,7 +1,7 @@
 include ../../config.h
 
-parmed:
-	PYTHONPATH=$(PYTHONPATH) $(PYTHON)setup.py install -f $(PYTHON_INSTALL)
+parmed::
+	PYTHONPATH=$(PYTHONPATH) $(PYTHON) setup.py install -f $(PYTHON_INSTALL)
 
 clean:
 	/bin/rm -fr build/
