skip building sff and nabc

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,7 +11,6 @@ serial:
 	@cd msander && $(MAKE) $(LIBSANDERLES)
 	@cd pysander && $(MAKE) $(PYSANDER)
 	@cd parmed && $(MAKE) $(PARMED)
-#	@cd parmed && $(PYINSTALL) > parmed/pyinstall.log
 	@cd xray && $(MAKE) xray
 	@cd xtalutil && $(MAKE) xtalutil
 	@cd addles && $(MAKE) addles
@@ -20,14 +19,14 @@ serial:
 	@cd ambpdb && $(MAKE) ambpdb
 	@cd sqm && $(MAKE) sqm
 	@cd moft && $(MAKE) $(MOFT)
-	@cd sff && $(MAKE) libsff
-	@cd nabc && $(MAKE) libnabc
+#	@cd sff && $(MAKE) libsff
+#	@cd nabc && $(MAKE) libnabc
 #	@cp pdb4amber/pdb4amber $(BINDIR)
 #	@cd gmml && $(MAKE) gmml
 
 parallel:
 	@cd msander && $(MAKE) msander
-	@cd msander && $(MAKE) msander.LES
+#	@cd msander && $(MAKE) msander.LES
 
 clean:
 	-(cd blas && $(MAKE) clean )
