seemingly got rid of extraneous writes, at least on the 2igd test case

--- a/src/msander/Makefile
+++ b/src/msander/Makefile
@@ -7,8 +7,6 @@ VPATH=
 # Add search paths for .mod files
 LOCALFLAGS = -I../sqm -I../rism 
 
-SANDER_RISM_INTERFACE = amber_rism_interface.API.o
-
 QMAPIOBJ = \
     abfqmmm_module.o qm_ewald.o qmmm_vsolv.o \
     qm2_extern_util_module.o qm2_extern_module.o \
@@ -35,7 +33,7 @@ LESAPIOBJ= memory_module.o stack.o file_io_dat.o les.o \
     mexit.o new_time.API.o extra_pts.LESAPI.o thermo_int.o matinv.o assert.o \
     erfcfun.o md_scheme.LES.o \
     constantph.o constante.o ips.o sglds.o iwrap2.o emap.o \
-    $(SANDER_RISM_INTERFACE) \
+    amber_rism_interface.API.o rism_report_c.API.o \
     spatial_recip.o spatial_fft.o parms.o softcore.o mbar.o \
     linear_response.o molecule.o dssp.o \
     charmm.API.o crg_reloc.o barostats.o prmtop_type.o \
@@ -84,7 +82,8 @@ APIOBJ=  file_io_dat.o constants.o state.o memory_module.o stack.o \
     debug.API.o mexit.o new_time.API.o extra_pts.API.o thermo_int.o les.o \
     matinv.o assert.o erfcfun.o md_scheme.o \
     constantph.o constante.o ips.o sglds.o iwrap2.o emap.o\
-    $(SANDER_RISM_INTERFACE) AmberNetcdf.o bintraj.o binrestart.o \
+    amber_rism_interface.API.o rism_report_c.API.o \
+    AmberNetcdf.o bintraj.o binrestart.o \
     spatial_recip.o spatial_fft.o parms.o softcore.o mbar.o linear_response.o \
     molecule.o dssp.o \
     charmm.API.o crg_reloc.o amd.o scaledMD.o barostats.o interface.o \
@@ -122,7 +121,8 @@ MMOBJ = \
     sander_lib.o sander.o scaledMD.o set.o \
     sglds.o shake.o $(SHORT_ENE) softcore.o spatial_fft.o \
     spatial_recip.o stack.o state.o thermo_int.o trajene.o \
-    wallclock.o xminC.o veclib.o dsarpack.o
+    wallclock.o xminC.o veclib.o dsarpack.o amber_rism_interface.o \
+    rism_report_c.o
 
 LESOBJ= \
     align.o AmberNetcdf.o amd.o amopen.o \
@@ -146,7 +146,7 @@ LESOBJ= \
     sander.LES.o  sander_lib.o scaledMD.o set.LES.o sglds.o \
     shake.o short_ene.LES.o softcore.o spatial_fft.o spatial_recip.o \
     stack.o state.o thermo_int.o trajene.o wallclock.o \
-    xminC.o veclib.o dsarpack.o
+    xminC.o veclib.o dsarpack.o amber_rism_interface.o rism_report_c.o
 
 XRAY_OBJS = \
    xray_fourier.o xray_globals.o xray_interface.o xray_utils.o \
@@ -168,9 +168,17 @@ libsander_skip::
 libsanderles_skip::
 	@echo "Skipping libsander"
 
-$(SANDER_RISM_INTERFACE): ../rism/amber_rism_interface.F90
+amber_rism_interface.API.o: ../rism/amber_rism_interface.F90
 	@echo "[MSANDER]  FC $<"
-	$(FC) -DAPI -c $(FOPTFLAGS) $(FFLAGS) $(RISMSANDER) -o $@ $< 
+	$(VB)$(FC) -DAPI -c $(FOPTFLAGS) $(FFLAGS) $(RISMSANDER) -o $@ $< 
+
+amber_rism_interface.o: ../rism/amber_rism_interface.F90
+	@echo "[MSANDER]  FC $<"
+	$(VB)$(FC) -c $(FOPTFLAGS) $(FFLAGS) $(RISMSANDER) -o $@ $< 
+
+rism_report_c.API.o: rism_report_c.F90
+	@echo "[MSANDER]  FC $<"
+	$(VB)$(FC) -DAPI -c $(FOPTFLAGS) $(FFLAGS) $(RISMSANDER) -o $@ $< 
 
 dummy:
 
