--- a/src/msander/Makefile
+++ b/src/msander/Makefile
@@ -33,7 +33,7 @@ LESAPIOBJ= memory_module.o stack.o file_io_dat.o les.o \
     mexit.o new_time.API.o extra_pts.LESAPI.o thermo_int.o matinv.o assert.o \
     erfcfun.o md_scheme.LES.o \
     constantph.o constante.o ips.o sglds.o iwrap2.o emap.o \
-    amber_rism_interface.API.o rism_report_c.API.o \
+    amber_rism_interface.API.o \
     spatial_recip.o spatial_fft.o parms.o softcore.o mbar.o \
     linear_response.o molecule.o dssp.o \
     charmm.API.o crg_reloc.o barostats.o prmtop_type.o \
@@ -82,7 +82,7 @@ APIOBJ=  file_io_dat.o constants.o state.o memory_module.o stack.o \
     debug.API.o mexit.o new_time.API.o extra_pts.API.o thermo_int.o les.o \
     matinv.o assert.o erfcfun.o md_scheme.o \
     constantph.o constante.o ips.o sglds.o iwrap2.o emap.o\
-    amber_rism_interface.API.o rism_report_c.API.o \
+    amber_rism_interface.API.o \
     AmberNetcdf.o bintraj.o binrestart.o \
     spatial_recip.o spatial_fft.o parms.o softcore.o mbar.o linear_response.o \
     molecule.o dssp.o \
@@ -121,8 +121,7 @@ MMOBJ = \
     sander_lib.o sander.o scaledMD.o set.o \
     sglds.o shake.o $(SHORT_ENE) softcore.o spatial_fft.o \
     spatial_recip.o stack.o state.o thermo_int.o trajene.o \
-    wallclock.o xminC.o veclib.o dsarpack.o amber_rism_interface.o \
-    rism_report_c.o
+    wallclock.o xminC.o veclib.o dsarpack.o 
 
 LESOBJ= \
     align.o AmberNetcdf.o amd.o amopen.o \
@@ -146,7 +145,7 @@ LESOBJ= \
     sander.LES.o  sander_lib.o scaledMD.o set.LES.o sglds.o \
     shake.o short_ene.LES.o softcore.o spatial_fft.o spatial_recip.o \
     stack.o state.o thermo_int.o trajene.o wallclock.o \
-    xminC.o veclib.o dsarpack.o amber_rism_interface.o rism_report_c.o
+    xminC.o veclib.o dsarpack.o 
 
 XRAY_OBJS = \
    xray_fourier.o xray_globals.o xray_interface.o xray_utils.o \
@@ -169,14 +168,6 @@ libsanderles_skip::
 	@echo "Skipping libsander"
 
 amber_rism_interface.API.o: ../rism/amber_rism_interface.F90
-	@echo "[MSANDER]  FC $<"
-	$(VB)$(FC) -DAPI -c $(FOPTFLAGS) $(FFLAGS) $(RISMSANDER) -o $@ $< 
-
-amber_rism_interface.o: ../rism/amber_rism_interface.F90
-	@echo "[MSANDER]  FC $<"
-	$(VB)$(FC) -c $(FOPTFLAGS) $(FFLAGS) $(RISMSANDER) -o $@ $< 
-
-rism_report_c.API.o: rism_report_c.F90
 	@echo "[MSANDER]  FC $<"
 	$(VB)$(FC) -DAPI -c $(FOPTFLAGS) $(FFLAGS) $(RISMSANDER) -o $@ $< 
 
