--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ requirements:
    - setuptools
    - bzip2
    - zlib
-   - fftw
+#  - mkl
 #  - libnetcdf
 #  - netcdf-fortran
 #  - openblas
@@ -31,7 +31,7 @@ requirements:
   run:
    - python
    - numpy
-   - fftw
+#  - mkl
 #  - libnetcdf
 #  - netcdf-fortran
 #  - openblas
