only use longlines flag for GNU compilers--not needed and not recognized for Intel

--- a/src/xray/Makefile
+++ b/src/xray/Makefile
@@ -1,6 +1,6 @@
 include ../../config.h
 
-LOCALFLAGS = $(CUDAFLAGS) -ffree-line-length-none
+LOCALFLAGS = $(CUDAFLAGS) 
 
 SRC = add_xray.F90 add_pdb.F90
 OBJ = add_xray.o add_pdb.o
