get most tests working; strange segfault in middle-QMMM test

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,7 +18,7 @@ serial:
 	@cd antechamber && $(MAKE) ac
 	@cd ambpdb && $(MAKE) ambpdb
 	@cd sqm && $(MAKE) sqm
-	@cd moft && $(MAKE) $(MOFT)
+#	@cd moft && $(MAKE) $(MOFT)
 #	@cd sff && $(MAKE) libsff
 #	@cd nabc && $(MAKE) libnabc
 #	@cp pdb4amber/pdb4amber $(BINDIR)
@@ -49,7 +49,7 @@ clean:
 	-(cd ambpdb && $(MAKE) clean )
 	-(cd antechamber && $(MAKE) clean )
 	-(cd sqm && $(MAKE) clean )
-	-(cd moft && $(MAKE) clean )
+#	-(cd moft && $(MAKE) clean )
 	-(cd sff && $(MAKE) clean )
 	-(cd nabc && $(MAKE) clean )
 #	-(cd gmml && $(MAKE) clean )
