--- a/test/LES/md.in
+++ b/test/LES/md.in
@@ -5,6 +5,5 @@ md on peptide single copy
   nstlim=20, dt=0.001,
   ntb=1, ntp=0, temp0=300,
   nscm=0,
-  ntwx=100, ntwr=20, ntpr=20, dt=0.002, iwrap=1,
+  ntwx=100, ntwr=20, ntpr=20, dt=0.002,
  /
-
