--- a/src/sqm/Makefile
+++ b/src/sqm/Makefile
@@ -74,9 +74,9 @@ libs:
 
 #-----------LIBS
 
-xminC.o:  ../sff/xminC.c
+xminC.o:  ../msander/xminC.c
 	@echo "[SQM]  CC $<"
-	$(VB)$(CC) -c -DSQM $(COPTFLAGS) $(CFLAGS) -o xminC.o ../sff/xminC.c
+	$(VB)$(CC) -c -DSQM $(COPTFLAGS) $(CFLAGS) -o $@ $<
 
 wallclock.o: ../msander/wallclock.F90
 	@echo "[SQM]  FC $<"
