--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,6 @@
 package:
-  name: amber_phenix
-#  version 1.4.1 adds --openmp to configure
-#  version 1.5   uses the new Jan 2022 code from Sergei
-  version: 1.5
+  name: msander
+  version: 1.0
 
 source:
   path: ../
@@ -41,6 +39,6 @@ requirements:
    - llvm-openmp  # [osx]
 
 about:
-    home: https://www.phenix-online.org/documentation/reference/amber.html
+    home: https://github.com/dacase/msander
     license: GNU General Public License (GPL/LGPL)
-    summary: Parts of AmberTools that are needed for interaction with the phenix crystallographic refinement package.
+    summary: updated version of the sander component of Amber
