use ASSERT in place of check_condition

--- a/src/xray/Makefile
+++ b/src/xray/Makefile
@@ -9,7 +9,7 @@ LIBOBJ = xray_atomic_scatter_factor.o xray_atomic_scatter_factor_impl_cpu.o \
 xray_atomic_scatter_factor_impl_gpu.o xray_bulk_mask_data.o \
 xray_bulk_mask.o xray_bulk_mask_impl_cpu.o xray_bulk_mask_impl_gpu.o \
 xray_bulk_model_afonine_2013.o xray_bulk_model.o xray_bulk_model_none.o \
-xray_bulk_model_simple.o xray_contracts.o xray_debug_dump.o \
+xray_bulk_model_simple.o xray_contracts.o \
 xray_dpartial_data.o xray_dpartial.o xray_dpartial_impl_cpu.o \
 xray_dpartial_impl_gpu.o xray_interface2_data.o xray_interface2.o \
 xray_non_bulk_data.o xray_non_bulk.o xray_non_bulk_impl_cpu.o \
