remove pdb2glycam test: use prepareforleap instead

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,7 @@
 test:
 	@./run_tests.sh
 
-test.all: test.general test.rism test.xray test.tleap test.antechamber
+test.all: test.general test.rism test.xray
 
 test.general:
 	-(cd dhfr && ./Run.dhfr)
@@ -35,17 +35,6 @@ test.xray:
 	-(cd xray/2msi && ./Run.2msi)
 #	-(cd cryoem/3j9d && ./Run.3j9d)
 	-(cd cryoem/emap && ./Run.emap)
-
-test.tleap:
-	-(cd tleap/OL3 && ./Run.OL3.sh)
-	-(cd tleap/BondAugmentations && ./Run.1p7e)
-
-test.antechamber:
-	-(cd antechamber/sustiva && Run.sustiva)
-	-(cd antechamber/sustiva && Run.sustiva_g2)
-
-test.cif:
-	-(cd nmr && ./Run.nef)
 
 clean::
 	/bin/rm -f TEST_FAILURES.diff
